# quran-video-maker-ffmpeg

./: .env.example  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  config.json  data.tar
.github/workflows/: cmake-cross-platform.yml  install-smoke.yml  release.yml  update-package-managers.yml
Formula/: qvm-ffmpeg.rb
assets/custom_audio_test/: 19.srt  19.vtt
metadata/: surah-themes.json
scoop/: qvm.json
src/: LiveApiClient.cpp  api.cpp  api.h  background_video_manager.cpp  background_video_manager.h  cache_utils.cpp  cache_utils.h  config_loader.cpp  config_loader.h  localization_utils.cpp  localization_utils.h  main.cpp  metadata_writer.cpp  metadata_writer.h  quran_data.h  r2_client.cpp  r2_client.h  recitation_utils.cpp  recitation_utils.h  subtitle_builder.cpp  subtitle_builder.h  timing_parser.cpp  timing_parser.h  types.h  video_generator.cpp  video_generator.h  video_selector.cpp  video_selector.h  video_standardizer.cpp  video_standardizer.h
src/audio/: custom_audio_processor.cpp  custom_audio_processor.h
src/text/: text_layout.cpp  text_layout.h
tests/: unit_tests.cpp
